// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea render correctly in ali 1`] = `
<textarea
  className="class"
  controlled={false}
  maxLength={140}
  onBlur={[Function]}
  onConfirm={[Function]}
  onFocus={[Function]}
  onInput={[Function]}
/>
`;

exports[`Textarea render correctly in web 1`] = `
<textarea
  className="class"
  controlled={false}
  onBlur={[Function]}
  onConfirm={[Function]}
  onFocus={[Function]}
  onInput={[Function]}
/>
`;
